--- a/.github/workflows/manual-trigger.yml
+++ b/.github/workflows/manual-trigger.yml
@@ -18,5 +18,6 @@ jobs:
       - name: Run python -v only on manual trigger
         # github.event_name が 'workflow_dispatch' の場合のみ実行
         if: github.event_name == 'workflow_dispatch'
-        run: python -v 2>&1 | tee hoge
-        cat hoge
+        run: |
+          python -v 2>&1 | tee hoge
+          cat hoge
