--- a/.github/workflows/import-csv.yml
+++ b/.github/workflows/import-csv.yml
@@ -24,5 +24,5 @@ jobs:
           PG_DATABASE: ${{ secrets.PG_DATABASE }}
           PG_USER: ${{ secrets.PG_USER }}
           PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
-        run: python generate_mozc_dict.py
+        run: python generate_mozc_dict_supabase.py
 
